Aggiunto lavoro tabella migranti

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                     <p>Un programma che permette di generare LLA (Link Local Address) IPv6 partendo da un MAC address</p>
                     <a target="_blank" class="button" href="Esercizio ipv6/ipv6.html">Visualizza &rarr;</a>
                 </div>
+                <div class="card">
+                    <h3>Tabella Migranti</h3>
+                    <p>Dato un file CSV visualizza una tabella che mostra il numero di migranti di ogni anno</p>
+                    <a target="_blank" class="button" href="Migranti/index.html">Visualizza &rarr;</a>
+                </div>
             </section>
         </main>
     </body>
