--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="card">
                     <h3>Tabella Migranti</h3>
-                    <p>Dato un file CSV visualizza una tabella che mostra il numero di migranti di ogni anno</p>
+                    <p>Dato un file CSV visualizza una tabella che mostra il numero di migranti di ogni anno con un grafico</p>
                     <a target="_blank" class="button" href="Migranti/index.html">Visualizza &rarr;</a>
                 </div>
             </section>
