--- a/Migranti/index.html
+++ b/Migranti/index.html
@@ -128,6 +128,7 @@
                 ctx.stroke()
             }
 
+            // Calcolare il valore massimo di un array
             function arrMax(arr) {
                 let max = arr[0];
                 for (let i = 1; i < arr.length; i++) {
