--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                     <p>Dato un file CSV visualizza una tabella che mostra il numero di migranti di ogni anno con un grafico</p>
                     <a target="_blank" class="button" href="Migranti/index.html">Visualizza &rarr;</a>
                 </div>
+                <div class="card">
+                    <h3>Criptazione</h3>
+                    <p>Cripta del testo</p>
+                    <a target="_blank" class="button" href="Criptazione/criptazione.html">Visualizza &rarr;</a>
+                </div>
             </section>
         </main>
     </body>
