--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                     <p>Cripta del testo</p>
                     <a target="_blank" class="button" href="Criptazione/criptazione.html">Visualizza &rarr;</a>
                 </div>
+                <div class="card">
+                    <h3>Anagrafica 3.0</h3>
+                    <p>Una tabella di anagrafica in cui l'utente può inserire dei dati, che vengono salvati permanentemente nel localStorage con un oggetto</p>
+                    <a target="_blank" class="button" href="Anagrafica 3/index.html">Visualizza &rarr;</a>
+                </div>
             </section>
         </main>
     </body>
