--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
             <section class="grid">
                 <div class="card">
+                    <h3>Anagrafica XML</h3>
+                    <p>Fetch di un file XML e visualizzazione in una tabella</p>
+                    <a target="_blank" class="button" href="Anagrafica-XML/index.html">Visualizza &rarr;</a>
+                </div>
+                <div class="card">
                     <h3>Anagrafica 1.1</h3>
                     <p>Fetch di un file JSON e visualizzazione in una tabella</p>
                     <a target="_blank" class="button" href="Anagrafica 1.1/anagrafica-1.1.html">Visualizza &rarr;</a>
