--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
             <section class="grid">
                 <div class="card">
+                    <h3>Ecommerce</h3>
+                    <p>Un ecommerce che legga la lista dei prodotti da file XML, JSON, CSV e TXT</p>
+                    <a target="_blank" class="button" href="Ecommerce/index.html">Visualizza &rarr;</a>
+                </div>
+                <div class="card">
                     <h3>Anagrafica XML</h3>
                     <p>Fetch di un file XML e visualizzazione in una tabella</p>
                     <a target="_blank" class="button" href="Anagrafica-XML/index.html">Visualizza &rarr;</a>
