--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
             <section class="grid">
                 <div class="card">
+                    <h3>WSDL</h3>
+                    <p>Conversione pollici-centimetri e viceversa con un service WSDL (non funziona su pages)</p>
+                    <a target="_blank" class="button" href="WSDL/index.html">Visualizza &rarr;</a>
+                </div>
+                <div class="card">
                     <h3>Ecommerce</h3>
                     <p>Un ecommerce che legga la lista dei prodotti da file XML, JSON, CSV e TXT</p>
                     <a target="_blank" class="button" href="Ecommerce/index.html">Visualizza &rarr;</a>
